Remove unnecessary italics

--- a/src/content/basics/resources/faq.mdx
+++ b/src/content/basics/resources/faq.mdx
@@ -10,7 +10,7 @@ You're just getting started with GraphQL. You're learning about syntax, running 
 
 ### What is GraphQL?
 
-**GraphQL is a language for querying data.** Unlike most query languages (such as SQL), you _don't_ use GraphQL to query a particular type of data store (such as a MySQL database). Instead, **you use GraphQL to query data from any number of different sources.**
+**GraphQL is a language for querying data.** Unlike most query languages (such as SQL), you don't use GraphQL to query a particular type of data store (such as a MySQL database). Instead, **you use GraphQL to query data from any number of different sources.**
 
 <Tip>
 
@@ -199,4 +199,4 @@ Apollo Client comes with everything needed to test a client app that makes queri
 
 Schemas naturally evolve over time. GraphQL schemas are more resilient to change than other APIs, but there are still occasions where breaking changes are necessary to support new functionality. [This section](/graphos/delivery/schema-checks#types-of-schema-changes) explains in more detail which kinds of changes are always safe to make, and which kinds might break existing clients.
 
-The [schema checks](/graphos/delivery/schema-checks) feature of Apollo GraphOS helps you identify potentially breaking schema changes _before_ you make them.
+The [schema checks](/graphos/delivery/schema-checks) feature of Apollo GraphOS helps you identify potentially breaking schema changes before you make them.
