--- a/src/content/basics/resources/product-launch-stages.mdx
+++ b/src/content/basics/resources/product-launch-stages.mdx
@@ -9,7 +9,7 @@ All launches of Apollo products, features, and open-source releases use two laun
 
 ### Preview
 
-Product and feature **previews** are usually announced publicly and represent a near-complete version of associated functionality. However, previews are _not_ officially supported with any SLA, and breaking API changes are possible between incremental versions of a preview.
+Product and feature **previews** are usually announced publicly and represent a near-complete version of associated functionality. However, previews are not officially supported with any SLA, and breaking API changes are possible between incremental versions of a preview.
 
 **A preview might still contain bugs or undergo iteration.** You're encouraged to try previews in test environments to familiarize yourself with upcoming functionality before it reaches [general availability](#general-availability).
 
