--- a/src/content/graphos/basics/graphs/creating-a-subgraph.mdx
+++ b/src/content/graphos/basics/graphs/creating-a-subgraph.mdx
@@ -50,7 +50,7 @@ When you're ready to add a new subgraph to your existing GraphOS supergraph, do 
 2. [Check your schema](/federation/managed-federation/federated-schema-checks) against your existing supergraph and handle any conflicts.
 3. Set up your CI/CD pipeline to perform checks and also [publish your subgraph schema](../delivery/publishing-schemas/#publish-subgraph-schemas).
 
-After you publish your subgraph's schema for the first time, GraphOS recognizes it as part of your supergraph, and you can start querying for data from _all_ your subgraphs!
+After you publish your subgraph's schema for the first time, GraphOS recognizes it as part of your supergraph, and you can start querying for data from all your subgraphs!
 
 <Caution>
 
