--- a/src/content/graphos/cloud-routing/dedicated/lattice.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/lattice.mdx
@@ -560,7 +560,7 @@ To update a Lattice service's authorization policy with additional restrictions,
 
   <Note>
 
-  The Apollo account ID you specify in your authorization policy is _not_ the Apollo organization ID you can find in GraphOS Studio.
+  The Apollo account ID you specify in your authorization policy is not the Apollo organization ID you can find in GraphOS Studio.
 
   </Note>
 
