--- a/src/content/graphos/cloud-routing/dedicated/quickstart.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/quickstart.mdx
@@ -19,7 +19,7 @@ To complete this quickstart, you must have the following:
   - Make your GraphQL API(s) available via a publicly accessible URL, for example, `https://api.mycompany.com/subgraphA`
   - Keep your GraphQL API(s) private but allow secure connections, for example, via [VPC networking](https://docs.aws.amazon.com/vpc/latest/peering/what-is-vpc-peering.html/)
 
-If you have multiple subgraphs, _each_ needs to be exposed to Apollo. Your supergraph, however, should only be publicly accessible via your cloud router.
+If you have multiple subgraphs, each needs to be exposed to Apollo. Your supergraph, however, should only be publicly accessible via your cloud router.
 
 <Note>
 
