--- a/src/content/graphos/cloud-routing/index.mdx
+++ b/src/content/graphos/cloud-routing/index.mdx
@@ -128,4 +128,4 @@ No. GraphOS only hosts the runtime for your supergraph's cloud router. GraphQL s
 
 Cloud supergraphs use [Apollo Federation 2](/federation/) for their core architecture. [Many GraphQL server libraries](/federation/building-supergraphs/supported-subgraphs/) support Federation 2.
 
-Your GraphQL API does _not_ already need to be using Apollo Federation to add it to a cloud supergraph.
+Your GraphQL API does not already need to be using Apollo Federation to add it to a cloud supergraph.
