--- a/src/content/graphos/delivery/linter-rules.mdx
+++ b/src/content/graphos/delivery/linter-rules.mdx
@@ -69,7 +69,7 @@ type Query {
 
 ### Types
 
-These rules apply to _all_ types that appear in a GraphQL schema, including:
+These rules apply to all types that appear in a GraphQL schema, including:
 
 - Objects
 - Interfaces
@@ -464,7 +464,7 @@ type Query {
 
 <RuleExpansionPanel
   title="ENUM_USED_AS_OUTPUT_DESPITE_SUFFIX"
-  whatItDoes="If an enum is used as the return type of a _non_-input field, checks that its name doesn't use the suffix `Input`."
+  whatItDoes="If an enum is used as the return type of a non-input field, checks that its name doesn't use the suffix `Input`."
   rationale="Including the suffix `Input` on an output type is misleading."
 >
 
