--- a/src/content/graphos/delivery/schema-proposals/index.mdx
+++ b/src/content/graphos/delivery/schema-proposals/index.mdx
@@ -32,7 +32,7 @@ This increased coordination improves design decisions and accountability, stream
 
 ## Benefits of native schema change management
 
-Managing schema changes _directly in GraphOS Studio_ provides the following benefits:
+Managing schema changes directly in GraphOS Studio provides the following benefits:
 
 - The proposal process uses GraphOS [schema checks](../schema-checks)&mdash;including [schema linting](../schema-linter)&mdash;at every step.
   - This minimizes the likelihood of errors and inconsistencies.
