--- a/src/content/graphos/enterprise/index.mdx
+++ b/src/content/graphos/enterprise/index.mdx
@@ -15,7 +15,7 @@ To compare GraphOS feature support across all plan types, see our [pricing page]
 
 ## Enterprise trial
 
-You can sign up for a GraphOS Enterprise trial to freely test out _most_ Enterprise features for the duration of the trial period.
+You can sign up for a GraphOS Enterprise trial to freely test out most Enterprise features for the duration of the trial period.
 
 <p>
   <ButtonLink
@@ -113,7 +113,7 @@ graph LR;
   api -."Filter schema<br/>according to contract B".->contractB
 ```
 
-You can then deploy a [self-hosted router](#self-hosted-routing) instance that uses one of your **contract schemas**. Client apps that connect to this **contract router** can query _only_ the fields that are included in the contract schema:
+You can then deploy a [self-hosted router](#self-hosted-routing) instance that uses one of your **contract schemas**. Client apps that connect to this **contract router** can query only the fields that are included in the contract schema:
 
 ```mermaid
 graph LR;
