--- a/src/content/graphos/explorer/connecting-authenticating.mdx
+++ b/src/content/graphos/explorer/connecting-authenticating.mdx
@@ -78,7 +78,7 @@ Safari `13.1` and later [blocks third-party cookies by default](https://webkit.o
 ### Environment variables
 
 The Explorer's Settings tab includes a section for defining environment variables. Here, you can provide sensitive information that you can then inject into header values, GraphQL variables, or [scripts](#custom-scripts).
-This lets you share operations (including their headers) with other team members _without_ exposing this sensitive data.
+This lets you share operations (including their headers) with other team members without exposing this sensitive data.
 
 #### Defining
 
@@ -91,7 +91,7 @@ You define environment variables in the Explorer's Settings tab, like so:
   width="400"
 />
 
-If you share an operation that uses environment variables with your team members, your _values_ for those environment variables are _not_ shared, and other users can provide their own values.
+If you share an operation that uses environment variables with your team members, your values for those environment variables are not shared, and other users can provide their own values.
 
 #### Injecting
 
