--- a/src/content/graphos/explorer/index.mdx
+++ b/src/content/graphos/explorer/index.mdx
@@ -63,7 +63,7 @@ You can click the **⊕** button next to any field in the Documentation tab to a
 The Explorer provides a two-step schema search (shortcut `⌘+K`):
 
 1. Find the schema field you're looking for
-2. Find the ideal _path_ to that field from your schema's entry points
+2. Find the ideal path to that field from your schema's entry points
 
 ### 1. Find a field
 
@@ -73,7 +73,7 @@ If you know exactly which type and which field you're looking for, you can separ
 
 ### 2. Find a path to the field
 
-After you identify a type-field pair, the Explorer lists all the _paths_ to that field that start at your schema's entry points (`Query`, `Mutation` and `Subscription`). These paths are ordered by depth.
+After you identify a type-field pair, the Explorer lists all the paths to that field that start at your schema's entry points (`Query`, `Mutation` and `Subscription`). These paths are ordered by depth.
 
 <Note>
 
