--- a/src/content/graphos/explorer/operation-collections.mdx
+++ b/src/content/graphos/explorer/operation-collections.mdx
@@ -68,7 +68,7 @@ To add operations to a collection:
 
    <Note>
 
-   If you define _multiple_ operations in a single editor, _all_ those operations are saved together as a single entry in a collection.
+   If you define multiple operations in a single editor, all those operations are saved together as a single entry in a collection.
 
    </Note>
 
@@ -112,7 +112,7 @@ After you add multiple operations to a collection, you can **drag and drop** to 
 
 <Note>
 
-Non-admin organization members _can't_ edit another team member's shared collection, _unless_ that team member specifically configures the collection to allow this.
+Non-admin organization members can't edit another team member's shared collection, unless that team member specifically configures the collection to allow this.
 
 </Note>
 
@@ -122,7 +122,7 @@ Non-admin organization members _can't_ edit another team member's shared collect
 
 ## Cloning collections and operations
 
-It's often helpful to create a _new_ collection or operation based on an existing one.
+It's often helpful to create a new collection or operation based on an existing one.
 
 - **To clone an entire collection,** click the **•••** button next to its entry in the list and select **Duplicate**.
   - You can save the new collection to any variant of any graph you have access to, and you can make it personal or shared.
@@ -149,11 +149,11 @@ Each graph variant in Studio has a [README page](../graphs/studio-features/#the-
 
 ### Public collections
 
-If you create a [public variant](../graphs/studio-features/#public-variants) of your graph, any shared collections for that variant are visible to _everyone_, not just members of your organization. Anonymous users can view and execute operations in a public collection, but they can't make any changes to the collection.
+If you create a [public variant](../graphs/studio-features/#public-variants) of your graph, any shared collections for that variant are visible to everyone, not just members of your organization. Anonymous users can view and execute operations in a public collection, but they can't make any changes to the collection.
 
 ## Sandbox collections
 
-[Apollo Sandbox](./sandbox/) is a special mode of GraphOS Studio that doesn't require an Apollo account. If you use Sandbox and _do_ sign in with your Apollo account, you can save personal operation collections that are _specific_ to Sandbox:
+[Apollo Sandbox](./sandbox/) is a special mode of GraphOS Studio that doesn't require an Apollo account. If you use Sandbox and do sign in with your Apollo account, you can save personal operation collections that are specific to Sandbox:
 
 <img
   src="../img/operation-collections/sandbox-collections.jpg"
@@ -168,6 +168,6 @@ While signed in to Sandbox, you can also access the collections for any graph an
 
 <Note>
 
-If you _don't_ sign in to Sandbox, operation collections are not available.
+If you don't sign in to Sandbox, operation collections are not available.
 
 </Note>
