--- a/src/content/graphos/explorer/subscriptions-explorer.mdx
+++ b/src/content/graphos/explorer/subscriptions-explorer.mdx
@@ -17,7 +17,7 @@ To execute a GraphQL subscription operation in the GraphOS Studio Explorer, firs
 
 <Note>
 
-Remember that the path _and protocol_ of your subscriptions URL might differ from those of your _primary_ endpoint.
+Remember that the path and protocol of your subscriptions URL might differ from those of your primary endpoint.
 
 </Note>
 
