--- a/src/content/graphos/metrics/datadog-integration.mdx
+++ b/src/content/graphos/metrics/datadog-integration.mdx
@@ -135,7 +135,7 @@ You can configure complex alerts with [Datadog monitors](https://docs.datadoghq.
 
 ### Datadog metric alert example
 
-GraphOS Studio's [Notifications feature](./notifications/notification-setup) supports alerts that trigger when the percentage of requests with an error in the last five minutes exceeds some threshold for a specific operation. Suppose that instead of alerting on a specific operation in the last five minutes, you want to alert on the error percentage over _all_ operations in some graph in the last ten minutes, such as when the percentage exceeds 1% for the graph `mygraph` with variant `staging`.
+GraphOS Studio's [Notifications feature](./notifications/notification-setup) supports alerts that trigger when the percentage of requests with an error in the last five minutes exceeds some threshold for a specific operation. Suppose that instead of alerting on a specific operation in the last five minutes, you want to alert on the error percentage over all operations in some graph in the last ten minutes, such as when the percentage exceeds 1% for the graph `mygraph` with variant `staging`.
 
 The [Datadog metric alert query](https://docs.datadoghq.com/api/v1/monitors/#query-types) needed here is:
 
