--- a/src/content/graphos/metrics/notifications/notification-setup.mdx
+++ b/src/content/graphos/metrics/notifications/notification-setup.mdx
@@ -97,7 +97,7 @@ You can repeat this process to create webhook URLs for different Slack channels.
 
 1. Back in Studio, specify a name for this notification channel in the Channel Name field. This name must be unique among your graph's notification channels.
 
-   _This name does not have to match the name of the Slack channel, but it's recommended for simplicity._
+   This name does not have to match the name of the Slack channel, but it's recommended for simplicity.
 
 2. In the Slack Webhook URL field, paste the webhook URL you obtained in [Create an incoming Slack hook](#1-create-an-incoming-slack-hook).
 3. Click **Next**.
@@ -136,7 +136,7 @@ Generate an [integration key](https://support.pagerduty.com/docs/generating-api-
 
 1. Back in Studio, specify a name for this notification channel in the Channel Name field. This name must be unique among your graph's notification channels.
 
-   _This name does not have to match the name of the PagerDuty service, but it's recommended for simplicity._
+   This name does not have to match the name of the PagerDuty service, but it's recommended for simplicity.
 
 2. In the PagerDuty Integration Key field, paste the integration key you obtained in [Create a PagerDuty integration key](#1-create-a-pagerduty-integration-key).
 
