--- a/src/content/graphos/metrics/notifications/performance-alerts.mdx
+++ b/src/content/graphos/metrics/notifications/performance-alerts.mdx
@@ -31,7 +31,7 @@ You can configure performance alerts to trigger for any of the following metrics
 - **Error percentage:** the number of requests with errors, divided by total
   requests
 
-Each performance alert you define can apply to either **a specific operation** or **any operation**. If you define an alert that applies to a specific operation, the "any operation" alerts for the _same metric_ no longer apply to that operation (that is, the more specific alert takes precedence).
+Each performance alert you define can apply to either **a specific operation** or **any operation**. If you define an alert that applies to a specific operation, the "any operation" alerts for the same metric no longer apply to that operation (that is, the more specific alert takes precedence).
 
 ## Setup
 
