--- a/src/content/graphos/org/audit-log.mdx
+++ b/src/content/graphos/org/audit-log.mdx
@@ -70,7 +70,7 @@ An exported audit log is a CSV file in which each row represents a material chan
 
 ## Resource types
 
-An audit log's **Resource_Type** column indicates what type of resource each action was performed _on_. Possible values are listed below.
+An audit log's **Resource_Type** column indicates what type of resource each action was performed on. Possible values are listed below.
 
 | Resource type        | Description                                       |
 | -------------------- | ------------------------------------------------- |
@@ -93,7 +93,7 @@ The **Action** column of an audit log indicates the type of each action that was
 
 <Note>
 
-If your audit log includes an action type that is _not_ listed below and you have questions about it, please contact **support@apollographql.com**.
+If your audit log includes an action type that is not listed below and you have questions about it, please contact **support@apollographql.com**.
 
 </Note>
 
