--- a/src/content/graphos/org/plans.mdx
+++ b/src/content/graphos/org/plans.mdx
@@ -25,16 +25,16 @@ Apollo offers the following plans to new organizations:
 
 <Note>
 
-**These are _brief summaries_ of each plan.** For complete plan details, see the [pricing page](https://apollographql.com/pricing).
+**These are brief summaries of each plan.** For complete plan details, see the [pricing page](https://apollographql.com/pricing).
 
 </Note>
 
 | Plan                             | Description                                                                                                                                                                                                                                                                                                                       |
 | -------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | **Serverless (Free)**            | Provides access to Serverless [cloud supergraphs](../graphs/#cloud-supergraphs), along with many other GraphOS features. Sets a fixed limit on monthly Serverless operations. This plan is free.                                                                                                                                  |
-| **Serverless**                   | Removes the operation limit of the **Serverless (Free)** plan, and is billed based on usage _above_ that limit. Also expands metrics data retention.                                                                                                                                                                              |
+| **Serverless**                   | Removes the operation limit of the **Serverless (Free)** plan, and is billed based on usage above that limit. Also expands metrics data retention.                                                                                                                                                                              |
 | **Dedicated <br/> (In preview)** | This plan lets you run a cloud router on dedicated, pre-provisioned infrastructure that you control and scale. It is currently in invite-only preview. <TrackableLink href="https://www.apollographql.com/contact-sales?type=dedicated&referrer=docs" eventName="content_contact_cloud">Get in touch</TrackableLink> if you'd like to request access or have any questions. |
-| **Enterprise**                   | The Enterprise plan features self-hosted routing, advanced security and schema delivery features, access control, and more. It does _not_ support cloud supergraphs. It includes negotiable usage rates. You can try out most Enterprise features for free with an [Enterprise trial](#enterprise-trials).                        |
+| **Enterprise**                   | The Enterprise plan features self-hosted routing, advanced security and schema delivery features, access control, and more. It does not support cloud supergraphs. It includes negotiable usage rates. You can try out most Enterprise features for free with an [Enterprise trial](#enterprise-trials).                        |
 
 <Tip>
 
@@ -46,7 +46,7 @@ If you're interested in an Enterprise plan, please <TrackableLink href="https://
 
 ### Enterprise trials
 
-You can sign up for a GraphOS Enterprise trial to freely test out _most_ [GraphOS Enterprise features](../#enterprise-features) (including [creating a self-hosted supergraph](../quickstart/self-hosted/)) for the duration of the trial period.
+You can sign up for a GraphOS Enterprise trial to freely test out most [GraphOS Enterprise features](../#enterprise-features) (including [creating a self-hosted supergraph](../quickstart/self-hosted/)) for the duration of the trial period.
 
 <Note>
 
@@ -64,7 +64,7 @@ The Enterprise trial period is **28 days**.
   </ButtonLink>
 </p>
 
-With an Enterprise trial, you create a _new_ GraphOS organization that behaves identically to a full Enterprise organization, _except_ the following features are unavailable:
+With an Enterprise trial, you create a new GraphOS organization that behaves identically to a full Enterprise organization, except the following features are unavailable:
 
 - Single sign-on (SSO)
 
@@ -88,11 +88,11 @@ Studio also displays how many days remain in your trial in the upper right:
 
 In the final few days of your trial period, Studio displays an additional notification banner.
 
-At the end of the trial, you can contact Apollo to upgrade your organization to a full Enterprise organization. **If you don't, the organization becomes _locked_** ([see details](#ending-a-trial)).
+At the end of the trial, you can contact Apollo to upgrade your organization to a full Enterprise organization. **If you don't, the organization becomes locked** ([see details](#ending-a-trial)).
 
 #### Ending a trial
 
-When your Enterprise trial period ends, your trial organization becomes _locked_ unless you contact Apollo to upgrade to a full Enterprise organization (you can upgrade any time before _or_ after the trial period ends).
+When your Enterprise trial period ends, your trial organization becomes locked unless you contact Apollo to upgrade to a full Enterprise organization (you can upgrade any time before or after the trial period ends).
 
 You can't access a locked organization from GraphOS Studio, and GraphOS stops serving supergraph schemas and [Enterprise license](/router/enterprise-features#the-enterprise-license) to your [self-hosted routers](../quickstart/self-hosted/).
 
@@ -102,7 +102,7 @@ If you have a non-Enterprise Apollo organization that was created before **Octob
 
 <Note>
 
-These plans do _not_ support cloud supergraphs, and they might not support other new GraphOS features moving forward.
+These plans do not support cloud supergraphs, and they might not support other new GraphOS features moving forward.
 
 If your organization is on one of these plans, we strongly recommend [upgrading to a current plan](#upgrading-to-a-current-plan).
 
@@ -111,7 +111,7 @@ If your organization is on one of these plans, we strongly recommend [upgrading 
 | Plan     | Description                                                                                                                                                                                                             |
 | -------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | **Free** | Our legacy Free plan, different from the current **Serverless (Free)** plan. Provides basic GraphOS features, with limited data retention and maximum query volume.                                                     |
-| **Team** | Our legacy plan for small and medium teams, which is billed based on the number of team members (that is, seat-based). Raises the retention and query volume limits from the **Free** plan, but does not _remove_ them. |
+| **Team** | Our legacy plan for small and medium teams, which is billed based on the number of team members (that is, seat-based). Raises the retention and query volume limits from the **Free** plan, but does not remove them. |
 
 ### Upgrading to a current plan
 
@@ -125,4 +125,4 @@ To create cloud supergraphs, your Apollo organization needs to be on either the 
   src="../img/convert-to-serverless.jpg"
 />
 
-**If you're on the legacy Team plan**, you currently need to create a _new_ organization to be able to create cloud supergraphs.
+**If you're on the legacy Team plan**, you currently need to create a new organization to be able to create cloud supergraphs.
