--- a/src/content/graphos/org/sso/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/okta-integration-guide.mdx
@@ -6,7 +6,7 @@ title: Setting up Apollo SSO with Okta
 
 **Single sign-on (SSO) is available only for [Enterprise plans](https://www.apollographql.com/pricing/).**
 
-Unlike most Enterprise features, this feature is _not_ available as part of an [Enterprise trial](../plans/#enterprise-trials).
+Unlike most Enterprise features, this feature is not available as part of an [Enterprise trial](../plans/#enterprise-trials).
 
 </EnterpriseFeature>
 
