--- a/src/content/graphos/org/sso/saml-integration-guide.mdx
+++ b/src/content/graphos/org/sso/saml-integration-guide.mdx
@@ -6,7 +6,7 @@ title: Setting up Apollo SSO with a SAML-based IdP
 
 **Single sign-on (SSO) is available only for [Enterprise plans](https://www.apollographql.com/pricing/).**
 
-Unlike most Enterprise features, this feature is _not_ available as part of an [Enterprise trial](../plans/#enterprise-trials).
+Unlike most Enterprise features, this feature is not available as part of an [Enterprise trial](../plans/#enterprise-trials).
 
 </EnterpriseFeature>
 
@@ -33,7 +33,7 @@ This guide walks through configuring a generic SAML-based identity provider (IdP
    - If your organization **does** already use `PingConnect`: [apollo_studio_guid_metadata.xml](apollo_studio_guid_metadata.xml)
      - If authentication requests need to be signed use: [apollo_studio_guid_signed_metadata.xml](apollo_studio_guid_signed_metadata.xml)
 
-3. Set your **Single Sign on URL** _or_ **ACS URL** to the following:
+3. Set your **Single Sign on URL** or **ACS URL** to the following:
 
    `https://sso.connect.pingidentity.com/sso/sp/ACS.saml2`
 
