--- a/src/content/technotes/TN0013-monolith-to-federation.mdx
+++ b/src/content/technotes/TN0013-monolith-to-federation.mdx
@@ -200,7 +200,7 @@ It might be safer and easier to move the entire `Room` type but only a "stub" of
 
 **How complex will your query plans become during the migration?**
 
-If you start by moving a type that's deeply interconnected with _other_ types, you might introduce unnecessary complexity to your router's query plans. For example, consider this query:
+If you start by moving a type that's deeply interconnected with other types, you might introduce unnecessary complexity to your router's query plans. For example, consider this query:
 
 ```graphql
 query MyFlights {
