--- a/src/content/technotes/TN0020-mocked-gateway-for-client-development.mdx
+++ b/src/content/technotes/TN0020-mocked-gateway-for-client-development.mdx
@@ -15,7 +15,7 @@ To mock parts of your supergraph effectively, both client and backend teams need
 
 <Note>
 
-We recommended that your backend and client teams align on your schema's structure ahead of time, even if you _don't_ use schema mocking. Doing so enables you to create an expressive schema that accelerates _all_ teams.
+We recommended that your backend and client teams align on your schema's structure ahead of time, even if you don't use schema mocking. Doing so enables you to create an expressive schema that accelerates all teams.
 
 </Note>
 
