--- a/src/content/technotes/TN0027-demand-oriented-schema-design.mdx
+++ b/src/content/technotes/TN0027-demand-oriented-schema-design.mdx
@@ -88,7 +88,7 @@ A good GraphQL schema will convey meaning about the underlying nodes in a graph,
 
 <!-- vale Vale.Spelling = NO -->
 
-> _There are only two hard things in Computer Science: cache invalidation and naming things._
+> There are only two hard things in Computer Science: cache invalidation and naming things.
 >
 > — Phil Karlton
 
