--- a/src/content/technotes/TN0031-graph-identities.mdx
+++ b/src/content/technotes/TN0031-graph-identities.mdx
@@ -8,7 +8,7 @@ tags: [schema-design]
 
 The purpose of this tech note is to demonstrate queries/mutations for identifying an actor attempting to use the graph. These examples can be useful for inspiring how the actor identity may be described in a GraphQL Schema and includes multiple use-cases for both users and services.
 
-_Our use-case identifies authenticated users and services as well as anonymous users._
+Our use-case identifies authenticated users and services as well as anonymous users.
 
 First we define interfaces for both query and mutation identity types.
 
