--- a/src/content/technotes/TN0045-router_resource_estimator.mdx
+++ b/src/content/technotes/TN0045-router_resource_estimator.mdx
@@ -10,7 +10,7 @@ tags: [router]
 
 import RouterResourceEstimator from "../../components/TechNotes/RouterResourceEstimator";
 
-The **router resource estimator** estimates the system resources you need to allocate for the Apollo Router to run production traffic. The resource estimator can help you get a _starting baseline_ that you can then iterate on.
+The **router resource estimator** estimates the system resources you need to allocate for the Apollo Router to run production traffic. The resource estimator can help you get a starting baseline that you can then iterate on.
 
 ## Usage
 
