--- a/src/content/graphos/basics/graphs/local-development.mdx
+++ b/src/content/graphos/basics/graphs/local-development.mdx
@@ -15,7 +15,7 @@ The `rover dev` command monitors each of your subgraph schemas (either via serve
 
 ## Starting your router
 
-You run `rover dev` once for _each subgraph_ in your supergraph. The _first_ time you run it, Rover spins up a router on your local machine.
+You run `rover dev` once for each subgraph in your supergraph. The first time you run it, Rover spins up a router on your local machine.
 
 Try running `rover dev` with an example subgraph like so:
 
@@ -40,7 +40,7 @@ You can replace the example subgraph URL and name in the above command with the 
 
 ## Adding a subgraph
 
-To add a subgraph to your local supergraph, run `rover dev` _again_ in a separate terminal window.
+To add a subgraph to your local supergraph, run `rover dev` again in a separate terminal window.
 
 You can add a subgraph to this article's example supergraph with the following command:
 
@@ -48,7 +48,7 @@ You can add a subgraph to this article's example supergraph with the following c
 rover dev --url https://flyby-reviews-sub.herokuapp.com/ --name reviews
 ```
 
-This command's output is similar to the output for the _initial_ execution, but it includes a line like the following:
+This command's output is similar to the output for the initial execution, but it includes a line like the following:
 
 ```
 🐤 adding the 'reviews' subgraph to the session
@@ -60,11 +60,11 @@ Now if you run test queries in the Explorer, you'll see that they can include fi
 
 ## Ending a `rover dev` session
 
-To shut down your local supergraph, use `CTRL+C` to stop the _first_ `rover dev` process you started. This automatically terminates all _secondary_ `rover dev` processes that are part of the same session.
+To shut down your local supergraph, use `CTRL+C` to stop the first `rover dev` process you started. This automatically terminates all secondary `rover dev` processes that are part of the same session.
 
 <Note>
 
-If you stop a _secondary_ `rover dev` process, your session remains active, and the router's schema is automatically updated to reflect the removed subgraph.
+If you stop a secondary `rover dev` process, your session remains active, and the router's schema is automatically updated to reflect the removed subgraph.
 
 </Note>
 
