--- a/src/content/graphos/basics/index.mdx
+++ b/src/content/graphos/basics/index.mdx
@@ -52,14 +52,14 @@ These features (along with many others) are available to organizations on Apollo
 - [**Cloud routing.**](./cloud-routing/)
   - GraphOS automatically provisions and hosts a router for each of your supergraphs. Clients query your router instead of individual **subgraphs**, enabling the router to automatically collect operation metrics that you can then [visualize in GraphOS Studio](./metrics/).
 - **The schema registry.**
-  - GraphOS tracks the GraphQL schemas for all your individual subgraphs, and it also handles **composing** those subgraph schemas into one _supergraph_ schema for your router.
+  - GraphOS tracks the GraphQL schemas for all your individual subgraphs, and it also handles **composing** those subgraph schemas into one supergraph schema for your router.
 - **Safe schema delivery.**
-  - The [schema checks](./delivery/schema-checks/) feature of GraphOS enables you to verify whether proposed changes to a subgraph will cause an issue with _other_ subgraphs, or with any of your existing clients.
-  - Whenever you update a subgraph schema, GraphOS composes a new _supergraph_ schema for your router. If composition succeeds, your router automatically begins using its new schema.
+  - The [schema checks](./delivery/schema-checks/) feature of GraphOS enables you to verify whether proposed changes to a subgraph will cause an issue with other subgraphs, or with any of your existing clients.
+  - Whenever you update a subgraph schema, GraphOS composes a new supergraph schema for your router. If composition succeeds, your router automatically begins using its new schema.
   - You can view the results of each [launch](./delivery/launches/) that takes place whenever you update a subgraph schema, helping you resolve any issues that might occur.
 - **An interface for every use case.**
   - [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content) is the primary web interface for GraphOS. Among other capabilities, you use Studio to create your organization and its supergraphs, view [schemas](./graphs/studio-features/#the-schema-page) and [metrics](./metrics/), and test out operations in [the Explorer](./explorer/).
-  - [The Rover CLI](/rover/getting-started/) is the primary _command-line_ interface for GraphOS. Among other capabilities, you use Rover to publish subgraph schemas to the registry, run schema checks from CI, and test out your supergraph within your development environment.
+  - [The Rover CLI](/rover/getting-started/) is the primary command-line interface for GraphOS. Among other capabilities, you use Rover to publish subgraph schemas to the registry, run schema checks from CI, and test out your supergraph within your development environment.
   - If you want to automate your own workflows outside of Studio or Rover, you can use the official [GraphOS Platform API](./platform-api) to do so. We'll expose more GraphOS capabilities through the Platform API over time.
 
 ### Enterprise features
