--- a/src/content/graphos/basics/operations/subscriptions.mdx
+++ b/src/content/graphos/basics/operations/subscriptions.mdx
@@ -42,7 +42,7 @@ To use subscriptions with your cloud supergraph, you must first complete certain
 
 ## What are subscriptions for?
 
-GraphQL subscriptions enable clients to receive continual, real-time updates whenever new data becomes available. Unlike queries and mutations, subscriptions are _long-lasting_. This means a client can receive multiple updates from a single subscription:
+GraphQL subscriptions enable clients to receive continual, real-time updates whenever new data becomes available. Unlike queries and mutations, subscriptions are long-lasting. This means a client can receive multiple updates from a single subscription:
 
 ```mermaid
 sequenceDiagram
@@ -75,7 +75,7 @@ flowchart LR;
   class client secondary;
 ```
 
-1. A client executes a GraphQL subscription operation against your cloud router _over HTTP:_
+1. A client executes a GraphQL subscription operation against your cloud router over HTTP:
 
    ```graphql title="Example subscription"
    subscription OnStockPricesChanged {
@@ -86,16 +86,16 @@ flowchart LR;
    }
    ```
 
-   - **The client does _not_ use a WebSocket protocol!** Instead, it receives updates via [multipart HTTP responses](/router/executing-operations/subscription-multipart-protocol/).
-   - By using HTTP for subscriptions, clients can execute _all_ GraphQL operation types over HTTP instead of using two different protocols.
+   - **The client does not use a WebSocket protocol!** Instead, it receives updates via [multipart HTTP responses](/router/executing-operations/subscription-multipart-protocol/).
+   - By using HTTP for subscriptions, clients can execute all GraphQL operation types over HTTP instead of using two different protocols.
    - Apollo Client for [Web](/react/data/subscriptions#http), [Kotlin](/kotlin/essentials/subscriptions#configuring-http-subscriptions), and [iOS](/ios/fetching/subscriptions#http) all support GraphQL subscriptions over HTTP with minimal configuration. See each library's documentation for details.
 
-2. When your cloud router receives a subscription, it executes that _same_ subscription against whichever subgraph defines the requested field (`stockPricesChanged` in the example above).
+2. When your cloud router receives a subscription, it executes that same subscription against whichever subgraph defines the requested field (`stockPricesChanged` in the example above).
 
-   - This communication _does_ use a WebSocket subprotocol (specifically, [`graphql-transport-ws`](https://github.com/enisdenjo/graphql-ws/blob/master/PROTOCOL.md)).
+   - This communication does use a WebSocket subprotocol (specifically, [`graphql-transport-ws`](https://github.com/enisdenjo/graphql-ws/blob/master/PROTOCOL.md)).
 
 3. The subgraph periodically sends new data to your router. Whenever it does, the router returns that data to the client in an additional HTTP response part.
-   - A subscription can include federated entity fields that are defined in _other_ subgraphs. If it does, the router _first_ fetches those fields by querying the corresponding subgraphs (such as **Portfolios** in the diagram above). These queries use HTTP as usual.
+   - A subscription can include federated entity fields that are defined in other subgraphs. If it does, the router first fetches those fields by querying the corresponding subgraphs (such as **Portfolios** in the diagram above). These queries use HTTP as usual.
 
 <Tip>
 
@@ -105,7 +105,7 @@ flowchart LR;
 
 ## Prerequisites
 
-⚠️ **Before you add `Subscription` fields to your subgraphs,** do _all_ the following _in the order shown_ to prevent errors:
+⚠️ **Before you add `Subscription` fields to your subgraphs,** do all the following in the order shown to prevent errors:
 
 1. Make sure you've [created a cloud supergraph](../quickstart/cloud) and connected your GraphQL API to it!
 
@@ -125,13 +125,13 @@ flowchart LR;
    }
    ```
 
-   - You can _skip_ modifying subgraph schemas that don't define any `Subscription` fields.
+   - You can skip modifying subgraph schemas that don't define any `Subscription` fields.
 
 4. In each subgraph with subscriptions, make sure the subgraph uses the [`graphql-transport-ws`](https://github.com/enisdenjo/graphql-ws/blob/master/PROTOCOL.md) WebSocket protocol for subscriptions.
 
 5. In each subgraph with subscriptions, make sure the subgraph hosts its subscriptions WebSocket endpoint at the path `/ws`.
 
-   - If your WebSocket endpoint is currently hosted at a different path, you can add `/ws` as an _additional_ path instead of removing the original path. This is helpful if legacy clients will continue executing subscriptions on your subgraph directly using the original path.
+   - If your WebSocket endpoint is currently hosted at a different path, you can add `/ws` as an additional path instead of removing the original path. This is helpful if legacy clients will continue executing subscriptions on your subgraph directly using the original path.
 
 6. Deploy your updated subgraphs.
 
@@ -209,14 +209,14 @@ subscription {
 
 <Note>
 
-- This operation _adds_ the `Product.id` field. The router needs `@key` fields of the `Product` entity to merge entity fields from across subgraphs.
-- This operation _removes_ all fields defined in the Reviews subgraph, because the Products subgraph can't resolve them.
+- This operation adds the `Product.id` field. The router needs `@key` fields of the `Product` entity to merge entity fields from across subgraphs.
+- This operation removes all fields defined in the Reviews subgraph, because the Products subgraph can't resolve them.
 
 </Note>
 
-At any point after the subscription is initiated, the Products subgraph might send updated data to our router. Whenever this happens, the router _does not_ immediately return this data to the client, because it's missing requested fields from the Reviews subgraph!
+At any point after the subscription is initiated, the Products subgraph might send updated data to our router. Whenever this happens, the router does not immediately return this data to the client, because it's missing requested fields from the Reviews subgraph!
 
-Instead, our router executes a standard GraphQL _query_ against the Reviews subgraph to fetch the missing entity fields:
+Instead, our router executes a standard GraphQL query against the Reviews subgraph to fetch the missing entity fields:
 
 ```graphql
 query {
@@ -234,7 +234,7 @@ After receiving this query result from the Reviews subgraph, our router combines
 
 ## Trying subscriptions with `curl`
 
-To quickly try out HTTP-based subscriptions _without_ setting up an Apollo Client library, you can execute a `curl` command against your cloud router with the following format:
+To quickly try out HTTP-based subscriptions without setting up an Apollo Client library, you can execute a `curl` command against your cloud router with the following format:
 
 ```bash title="Example curl request" showLineNumbers=false
  curl 'https://main--my-org-supergraph.apollographos.net/graphql' -v \
