--- a/src/content/graphos/basics/quickstart/next-steps.mdx
+++ b/src/content/graphos/basics/quickstart/next-steps.mdx
@@ -13,7 +13,7 @@ You should always start by [installing the Rover CLI](#first-install-the-rover-c
 
 ## First, install the Rover CLI!
 
-The Rover CLI is the primary command-line interface for interacting with GraphOS. You'll use Rover both locally _and_ in CI environments to perform a variety of actions on your supergraph and its individual subgraphs.
+The Rover CLI is the primary command-line interface for interacting with GraphOS. You'll use Rover both locally and in CI environments to perform a variety of actions on your supergraph and its individual subgraphs.
 
 [**Install Rover**](/rover/getting-started), then return to this article.
 
@@ -41,7 +41,7 @@ flowchart LR;
   class clients secondary;
 ```
 
-This initial schema fetch is a one-time action to help you get started. Whenever your API's schema _changes_, Studio _doesn't_ automatically fetch it again. This means your router _doesn't know_ about those changes. Clients can't include any new schema fields in their queries until your router _does_ know about the changes!
+This initial schema fetch is a one-time action to help you get started. Whenever your API's schema changes, Studio doesn't automatically fetch it again. This means your router doesn't know about those changes. Clients can't include any new schema fields in their queries until your router does know about the changes!
 
 Whenever you update your subgraph's schema, you need to **publish** those changes with the Rover CLI. [Learn about publishing subgraph schemas.](../delivery/publishing-schemas/#publish-subgraph-schemas)
 
@@ -49,7 +49,7 @@ After learning about the publishing process, you should [integrate it into your 
 
 ### Add another subgraph
 
-One of the most powerful features of a supergraph is that it can combine _multiple_ GraphQL APIs into a _single_ graph:
+One of the most powerful features of a supergraph is that it can combine multiple GraphQL APIs into a single graph:
 
 ```mermaid
 flowchart LR;
@@ -87,7 +87,7 @@ If your supergraph runs in multiple environments, you should create a different 
 
 ### Enable federation features
 
-Supergraphs use an architecture called **Apollo Federation**. Federation is at its most powerful when your subgraphs _share_ responsibility for some of your schema's types, instead of defining mutually exclusive types and fields.
+Supergraphs use an architecture called **Apollo Federation**. Federation is at its most powerful when your subgraphs share responsibility for some of your schema's types, instead of defining mutually exclusive types and fields.
 
 <Tip>
 
@@ -98,8 +98,8 @@ Supergraphs use an architecture called **Apollo Federation**. Federation is at i
 To take full advantage of federation features, each of your subgraphs needs to use a GraphQL server library that conforms to the **Apollo Federation subgraph specification**. Fortunately, many popular server libraries do!
 
 1. To check whether your current GraphQL server library supports the subgraph specification, see [this article](/federation/building-supergraphs/supported-subgraphs).
-   - If your library _does_ support the spec, consult its documentation to learn how to enable its federation support. For Apollo Server, see [this article](/apollo-server/using-federation/apollo-subgraph-setup).
-   - If your library _doesn't_ support the spec, consult the library list to find an alternative in your preferred programming language.
+   - If your library does support the spec, consult its documentation to learn how to enable its federation support. For Apollo Server, see [this article](/apollo-server/using-federation/apollo-subgraph-setup).
+   - If your library doesn't support the spec, consult the library list to find an alternative in your preferred programming language.
 2. Enable federation support for all your subgraphs and deploy the updated subgraphs to your environment.
 
 After you make these changes, you can start using powerful federation features in your subgraphs, including:
@@ -112,14 +112,14 @@ After you make these changes, you can start using powerful federation features i
 
 Every time you want to make changes to one of your subgraphs, you should do the following:
 
-1. Verify that your proposed changes won't break your supergraph _or_ any of your existing clients.
+1. Verify that your proposed changes won't break your supergraph or any of your existing clients.
    - To do this, you set up [schema checks](../delivery/schema-checks/) for your supergraph.
 2. Whenever you deploy verified changes, always publish your updated subgraph schema to GraphOS as part of that deployment.
    - For a basic example of this, see [Publishing with continuous delivery](../delivery/publishing-schemas/#publish-with-continuous-delivery).
 
 ### Disable client-subgraph communication
 
-With a supergraph architecture, clients should _never_ query your individual subgraphs directly. Instead, they should always query the router! This means your subgraphs can (and should) _reject_ incoming requests from any source _besides_ the router.
+With a supergraph architecture, clients should never query your individual subgraphs directly. Instead, they should always query the router! This means your subgraphs can (and should) reject incoming requests from any source besides the router.
 
 ```mermaid
 flowchart LR;
@@ -140,7 +140,7 @@ How you choose to configure this access control depends on your GraphQL server l
 
 <Caution>
 
-Make sure any _existing_ clients that communicate directly with your API are updated to communicate with your router _before_ you begin rejecting direct requests!
+Make sure any existing clients that communicate directly with your API are updated to communicate with your router before you begin rejecting direct requests!
 
 </Caution>
 
