--- a/src/content/graphos/delivery/launches.mdx
+++ b/src/content/graphos/delivery/launches.mdx
@@ -4,7 +4,7 @@ subtitle: Learn about the process of deploying updates to supergraphs
 description: Discover what changes trigger a launch, how to monitor launch status, and the steps involved in an Apollo GraphOS launch.
 ---
 
-In GraphOS, a **launch** represents the complete process of applying a set of updates to a supergraph. Launches are _usually_ triggered by making changes to one of your published subgraph schemas.
+In GraphOS, a **launch** represents the complete process of applying a set of updates to a supergraph. Launches are usually triggered by making changes to one of your published subgraph schemas.
 
 <img className="screenshot" src="../img/launch-completed.jpg" width="500" />
 
