--- a/src/content/graphos/explorer/embed-explorer.mdx
+++ b/src/content/graphos/explorer/embed-explorer.mdx
@@ -60,7 +60,7 @@ For more information, see the [landing page plugin API reference](/apollo-server
 
 <Note>
 
-For descriptions of options shown in the dialog (along with advanced options that _aren't_ shown), [see below](#options).
+For descriptions of options shown in the dialog (along with advanced options that aren't shown), [see below](#options).
 
 </Note>
 
@@ -69,7 +69,7 @@ For descriptions of options shown in the dialog (along with advanced options tha
 You can prepopulate your embedded Explorer with an operation from one of your existing Explorer tabs. If you do, the embedded Explorer includes all the following automatically on load:
 
 - The operation you selected
-- Any variable names and values defined in the operation's associated tab that are _used_ by the operation
+- Any variable names and values defined in the operation's associated tab that are used by the operation
 - All header names and values defined in the operation's associated tab
 
 To prepopulate a default operation, use one of the following methods:
@@ -163,7 +163,7 @@ These are the top-level fields you can include in the options object you pass to
 
 The Explorer fetches this variant's schema from GraphOS Studio to populate its Documentation panel and enable code completion.
 
-If you omit this option, the Explorer _does_ still load, but it doesn't know which schema to fetch. This prevents the Explorer from providing critical features like documentation and code completion.
+If you omit this option, the Explorer does still load, but it doesn't know which schema to fetch. This prevents the Explorer from providing critical features like documentation and code completion.
 
 </td>
 </tr>
@@ -180,7 +180,7 @@ If you omit this option, the Explorer _does_ still load, but it doesn't know whi
 
 The endpoint URL of the variant you want to use the embedded Explorer with. This value is automatically populated in the Explorer's embed snippet.
 
-**Required**, _unless_ you specify your own fetcher with the [`handleRequest`](#handlerequest) option.
+**Required**, unless you specify your own fetcher with the [`handleRequest`](#handlerequest) option.
 
 </td>
 </tr>
@@ -231,7 +231,7 @@ The default value is `false`.
 </td>
 <td>
 
-By default, the embedded Explorer uses the `fetch` API to send requests to your `endpointUrl`. You can instead pass a _custom_ fetcher that's used to run all operations.
+By default, the embedded Explorer uses the `fetch` API to send requests to your `endpointUrl`. You can instead pass a custom fetcher that's used to run all operations.
 
 You might want to do this if you need to include specific headers in every request made from your embedded Explorer.
 
@@ -248,7 +248,7 @@ You might want to do this if you need to include specific headers in every reque
 </td>
 <td>
 
-By default, the embedded Explorer uses your variant's **Include cookies** setting, which you configure from the _non_-embedded Explorer in Studio.
+By default, the embedded Explorer uses your variant's **Include cookies** setting, which you configure from the non-embedded Explorer in Studio.
 
 You can set `includeCookies` to `true` if you instead want the Explorer to pass `{ credentials: 'include' }` for its requests.
 
@@ -256,7 +256,7 @@ If you pass the `handleRequest` option, this option is ignored.
 
 Read more about the `fetch` API and credentials [here](https://developer.mozilla.org/en-US/docs/Web/API/fetch#credentials).
 
-This config option is **deprecated** in favor of configuring the **Include cookies** setting for your variant in the _non_-embedded Explorer.
+This config option is **deprecated** in favor of configuring the **Include cookies** setting for your variant in the non-embedded Explorer.
 
 </td>
 </tr>
@@ -310,7 +310,7 @@ If you omit this option, the Explorer initially loads an example query based on 
 
 If you use one of the sharing methods described in [Setting a default operation](#setting-a-default-operation), the generated code snippet automatically sets this option with the details of the operation you used.
 
-If [`persistExplorerState`](#persistexplorerstate) is `true` _and_ you provide this option, the Explorer loads any of the user's tabs from `localStorage`, and it _also_ opens a _new_ tab with this operation.
+If [`persistExplorerState`](#persistexplorerstate) is `true` and you provide this option, the Explorer loads any of the user's tabs from `localStorage`, and it also opens a new tab with this operation.
 
 Example:
 
