--- a/src/content/shared/pq-intro.mdx
+++ b/src/content/shared/pq-intro.mdx
@@ -1,4 +1,4 @@
-With [GraphOS Enterprise](/graphos/enterprise/), you can enhance your supergraph's security by maintaining a **persisted query list** (**PQL**) for your supergraph's self-hosted router. To create and update the PQL, first-party apps register trusted operations to the PQL at _build time_.
+With [GraphOS Enterprise](/graphos/enterprise/), you can enhance your supergraph's security by maintaining a **persisted query list** (**PQL**) for your supergraph's self-hosted router. To create and update the PQL, first-party apps register trusted operations to the PQL at build time.
 
 ```mermaid
 flowchart LR
@@ -20,7 +20,7 @@ Clients can register any kind of operation to a PQL, including queries, mutation
 
 </Note>
 
-At _runtime_, the [Apollo Router](/router/) checks incoming requests against the PQL, which can act as operation safelist, depending on your [router configuration](#2-router-configuration).
+At runtime, the [Apollo Router](/router/) checks incoming requests against the PQL, which can act as operation safelist, depending on your [router configuration](#2-router-configuration).
 
 ```mermaid
 flowchart LR
@@ -57,6 +57,6 @@ Your router can use its persisted query list (PQL) to both **protect your superg
 
 - When you enable **safelisting**, your router rejects any incoming operations not registered in its PQL.
 
-- Client apps can execute an operation by providing its PQL-specified ID _instead of_ the entire operation string.
+- Client apps can execute an operation by providing its PQL-specified ID instead of the entire operation string.
   - Requesting by ID can significantly reduce latency and bandwidth usage for large operation strings.
-  - Your router can _require_ that clients provide operations by ID and _reject_ full operation strings—even operation strings present in the PQL.
+  - Your router can require that clients provide operations by ID and reject full operation strings—even operation strings present in the PQL.
