--- a/src/content/technotes/TN0010-reponse-type-pattern.mdx
+++ b/src/content/technotes/TN0010-reponse-type-pattern.mdx
@@ -59,13 +59,13 @@ type Query {
 }
 ```
 
-This `Query.users` field makes intuitive sense: if you query it, you get back a list of `User` objects. _However_, this return type doesn't provide any insight into the result:
+This `Query.users` field makes intuitive sense: if you query it, you get back a list of `User` objects. However, this return type doesn't provide any insight into the result:
 
 - If the list is empty, is that because there are zero users, or did an error occur?
-- Even if the list is populated, did the API return _all_ users or just a subset?
+- Even if the list is populated, did the API return all users or just a subset?
 - Are there multiple pages of results?
 
-To answer questions like these, it may be helpful for top-level fields of `Query` to return "wrapper" objects that can include both the operation result _and_ metadata about the operation's execution. For example, in cases where you need to [paginate your results](/technotes/TN0027-demand-oriented-schema-design/#a-brief-sidebar-on-pagination-conventions) or implement [Relay-style connections](/technotes/TN0029-relay-style-connections/) this pattern can be helpful.
+To answer questions like these, it may be helpful for top-level fields of `Query` to return "wrapper" objects that can include both the operation result and metadata about the operation's execution. For example, in cases where you need to [paginate your results](/technotes/TN0027-demand-oriented-schema-design/#a-brief-sidebar-on-pagination-conventions) or implement [Relay-style connections](/technotes/TN0029-relay-style-connections/) this pattern can be helpful.
 
 ### Example: `UsersResponse`
 
