--- a/src/content/technotes/TN0017-interfaces.mdx
+++ b/src/content/technotes/TN0017-interfaces.mdx
@@ -15,7 +15,7 @@ Not an enterprise customer? [Learn about GraphOS for Enterprise.](/graphos/enter
 
 </Tip>
 
-GraphQL interfaces enable schema fields to return one of multiple object types, all of which must _implement_ that interface. To implement an interface, an object type must define all fields that are included in that interface (otherwise, the schema is invalid):
+GraphQL interfaces enable schema fields to return one of multiple object types, all of which must implement that interface. To implement an interface, an object type must define all fields that are included in that interface (otherwise, the schema is invalid):
 
 ```graphql
 interface Media {
@@ -28,7 +28,7 @@ type Book implements Media {
 }
 ```
 
-Because interfaces can enforce this requirement on implementing object types, it can be tempting to create interfaces _purely_ to enforce field definitions. The following schema requires a `name` field on all its object types by declaring that those types implement the `Nameable` interface:
+Because interfaces can enforce this requirement on implementing object types, it can be tempting to create interfaces purely to enforce field definitions. The following schema requires a `name` field on all its object types by declaring that those types implement the `Nameable` interface:
 
 <p style="margin-bottom: 0;">❌</p>
 
@@ -93,7 +93,7 @@ type Query {
 
 ## Implications of adding new implementing types
 
-When a client includes a field returning an abstract type in an operation, they usually enumerate which fields from the _concrete_ types they're interested in with "conditional fragments," like so:
+When a client includes a field returning an abstract type in an operation, they usually enumerate which fields from the concrete types they're interested in with "conditional fragments," like so:
 
 ```graphql
 query OwnersAndPets {
@@ -114,11 +114,11 @@ query OwnersAndPets {
 
 <Note>
 
-If `Pet` were a _union_ instead of an interface (`union Pet = Cat | Dog`), then _all_ requested fields would need to be included in conditional fragments. It wouldn't be possible to include the `name` field outside of a fragment, even though the two types both happen to define that field.
+If `Pet` were a union instead of an interface (`union Pet = Cat | Dog`), then all requested fields would need to be included in conditional fragments. It wouldn't be possible to include the `name` field outside of a fragment, even though the two types both happen to define that field.
 
 </Note>
 
-If your API adds additional possible types to the abstract type, clients must change their operations to select data from those new types. Although this isn't a _breaking_ change, this situation warrants some defensive programming.
+If your API adds additional possible types to the abstract type, clients must change their operations to select data from those new types. Although this isn't a breaking change, this situation warrants some defensive programming.
 
 ```ts
 // Trigger a TypeScript error if a new type is introduced but
