--- a/src/content/technotes/TN0018-aggregating-across-subgraphs.mdx
+++ b/src/content/technotes/TN0018-aggregating-across-subgraphs.mdx
@@ -7,10 +7,10 @@ id: TN0018
 tags: [federation]
 ---
 
-A supergraph helps you orchestrate data fetches across multiple domains, however it _doesn't_ automatically solve some commonly encountered problems in distributed architectures:
+A supergraph helps you orchestrate data fetches across multiple domains, however it doesn't automatically solve some commonly encountered problems in distributed architectures:
 
 - Searching across a variety of types stored in multiple data sources
-- Combining lists of multiple types from multiple sources into a _single_ list, especially when paginated
+- Combining lists of multiple types from multiple sources into a single list, especially when paginated
 - Filtering a list based on attributes defined in various data sources
 - Deriving data from an aggregate of multiple data sources
 
@@ -41,7 +41,7 @@ query SearchEverything($query: String!) {
 
 If different subgraphs define the `Book` type and the `Movie` type, the question is: which subgraph provides the `Query.search` root field?
 
-For a given operation, the query planner resolves each field in a single subgraph. This invariant holds true _even if multiple subgraphs define a particular field_.
+For a given operation, the query planner resolves each field in a single subgraph. This invariant holds true even if multiple subgraphs define a particular field.
 
 ```graphql title="Books subgraph"
 type Query {
@@ -77,7 +77,7 @@ The query planner deterministically chooses **one** subgraph to resolve the `Que
 
 If the query planner chooses `Query.search` within the Books subgraph, that subgraph can provide only books, not movies.
 
-To resolve this, we _could_ expand the Books subgraph schema to include the `Movie` definition and add the `@key` directive to create a join to the Movies subgraph, like so:
+To resolve this, we could expand the Books subgraph schema to include the `Movie` definition and add the `@key` directive to create a join to the Movies subgraph, like so:
 
 ```graphql
 type Movie implements Product @key(fields: "id") {
@@ -86,11 +86,11 @@ type Movie implements Product @key(fields: "id") {
 }
 ```
 
-Now the Books subgraph can return `Movie` instances, but that means it needs access to the data source for movie data. This breaks the _separation of concerns_ we rely on to create dividing lines between domains and subgraphs.
+Now the Books subgraph can return `Movie` instances, but that means it needs access to the data source for movie data. This breaks the separation of concerns we rely on to create dividing lines between domains and subgraphs.
 
 ## Solution: Create a new subgraph
 
-When product requirements don't fit cleanly into a single domain, it often indicates that we need a _new_ domain. Let's design a system that includes a new **search domain**. This includes a search index and a Search subgraph that provides the `Query.search` root field.
+When product requirements don't fit cleanly into a single domain, it often indicates that we need a new domain. Let's design a system that includes a new **search domain**. This includes a search index and a Search subgraph that provides the `Query.search` root field.
 
 ```mermaid
 graph LR
