--- a/src/content/technotes/TN0019-federation-n-plus-1.mdx
+++ b/src/content/technotes/TN0019-federation-n-plus-1.mdx
@@ -30,7 +30,7 @@ In a monolithic GraphQL server, the execution engine takes these steps:
 If the `Query.topReviews` field returns 10 reviews, then the executor resolves `Review.product` field 10 times. If the `Reviews.product` field makes a database or REST query for a single `Product`, then we'll see 10 unique calls to the data source. This is suboptimal for the following reasons:
 
 - It's more efficient to fetch the 10 products in a single query (for example `SELECT * FROM products WHERE id IN (<product ids>)`).
-- If any reviews refer to the _same_ product, then we're wasting resources fetching something we already have.
+- If any reviews refer to the same product, then we're wasting resources fetching something we already have.
 
 The solution for monolithic GraphQL APIs is the [dataloader](https://github.com/graphql/dataloader) pattern. All GraphQL server implementations support this pattern. The [Apollo Server documentation explains how to use the JavaScript implementation](/apollo-server/data/fetching-data#batching-and-caching) in Node.js servers.
 
@@ -69,7 +69,7 @@ type Product @key(fields: "id") {
 Fortunately, query planning handles N+1 queries for entities like the `Product` type by default! The query plan for this operation works like this:
 
 1. First, we `Fetch` the list of `Review`s from the Reviews subgraph using the root field `Query.topReviews`. We also ask for the `id` of each associated product.
-2. Next, we extract the `Product` _entity references_ and `Fetch` them in a **batch** to the Products subgraph's `Query._entities` root field.
+2. Next, we extract the `Product` entity references and `Fetch` them in a **batch** to the Products subgraph's `Query._entities` root field.
 3. After we get back the `Product` entities, we merge them into the list of `Review`s, indicated by the `Flatten` step.
 
 ```mermaid
